fix formating and updated csv

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 											I am an aspiring data scientist who is proficient in different programming languages. I am skilled in Python,
 											C# and Java and also am familiar with software such as PowerBI, Tableau, TIBCO, Adobe Photoshop and Adobe Illustrator. In the future, I want to be a Data Scientist who will make an impact on the world.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Download CSV</a></li>
+											<li><a href="https://drive.google.com/file/d/1-qyJcQ1O_Ur0NLK6UYRGIG_LOpzfnz2o/view?usp=sharing" target="_blank" class="button">Download CSV</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/MainPic.png" alt="" /></span>
@@ -262,13 +262,11 @@
 							</header>
 						
 							<section>
-								<div class="experience-section">
-									<div class="experience">
-										<div class="title">Field Surveyor</div>
-										<div class="company">Grab</div>
-										<div class="dates">December 2021 - Feburary 2022</div>
-										<p>Responsible for conducting immersive market research and administrative duties</p>
-									</div>
+								<div class="experience">
+									<div class="title">Field Surveyor</div>
+									<div class="company">Grab</div>
+									<div class="dates">December 2021 - Feburary 2022</div>
+									<p>Responsible for conducting immersive market research and administrative duties</p>
 								</div>
 							</section>
 						</section>
@@ -280,22 +278,20 @@
 							</header>
 						
 							<section>
-								<div class="experience-section">
-									<div class="experience">
-										<div class="title">Diploma of Data Science</div>
-										<div class="company">Ngee Ann Poly, Singapore</div>
-										<div class="dates">March 2022 - March 2025</div>
-									</div>
-									<div class="experience">
-										<div class="title">O Level's</div>
-										<div class="company">Yuan Ching Secondary School, Singapore</div>
-										<div class="dates">Janurary 2017 - October 2021</div>
-									</div>
-									<div class="experience">
-										<div class="title">PSLE</div>
-										<div class="company">Nan Hua Primary School, Singapore</div>
-										<div class="dates">Janurary 2010 - October 2016</div>
-									</div>
+								<div class="experience">
+									<div class="title">Diploma of Data Science</div>
+									<div class="company">Ngee Ann Poly, Singapore</div>
+									<div class="dates">March 2022 - March 2025</div>
+								</div>
+								<div class="experience">
+									<div class="title">O Level's</div>
+									<div class="company">Yuan Ching Secondary School, Singapore</div>
+									<div class="dates">Janurary 2017 - October 2021</div>
+								</div>
+								<div class="experience">
+									<div class="title">PSLE</div>
+									<div class="company">Nan Hua Primary School, Singapore</div>
+									<div class="dates">Janurary 2010 - October 2016</div>
 								</div>
 							</section>
 						</section>
