Updated Pawgress Pictures

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 											I am an aspiring data scientist who is proficient in different programming languages. I am skilled in Python,
 											C# and Java and also am familiar with software such as PowerBI, Tableau, TIBCO, Adobe Photoshop and Adobe Illustrator. In the future, I want to be a Data Scientist who will make an impact on the world.</p>
 										<ul class="actions">
-											<li><a href="https://drive.google.com/file/d/1-qyJcQ1O_Ur0NLK6UYRGIG_LOpzfnz2o/view?usp=sharing" target="_blank" class="button">Download CSV</a></li>
+											<li><a href="#" class="button">Download CSV</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/MainPic.png" alt="" /></span>
@@ -75,7 +75,7 @@
 										<p>Developed and deployed Android applications, utilizing Java and XML to create user-friendly interfaces and implement core functionality.</p>
 									</li>
 									<li>
-										<svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M420.55,301.93a24,24,0,1,1,24-24,24,24,0,0,1-24,24m-265.1,0a24,24,0,1,1,24-24,24,24,0,0,1-24,24m273.7-144.48,47.94-83a10,10,0,1,0-17.27-10h0l-48.54,84.07a301.25,301.25,0,0,0-246.56,0L116.18,64.45a10,10,0,1,0-17.27,10h0l47.94,83C64.53,202.22,8.24,285.55,0,384H576c-8.24-98.45-64.54-181.78-146.85-226.55"/></svg>
+										<svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z"/></svg>
 										<h3>C#</h3>
 										<p>Developed medium-scale applications based on the Object-Oriented (OO) approach</p>
 									</li>
@@ -126,7 +126,11 @@
 										<span class="date">August 9, 2023</span>
 										<h2>Pawgress</h2>
 									</header>
-									<a class="image fit"><img src="images/pawgress.png" alt="" /></a>
+									<div style="display: flex;">
+										<a class="image fit"><img src="images/Pawgress.png" alt="" /></a>
+										<a class="image fit"><img src="images/PawgressShop.png" alt="" /></a>
+										<a class="image fit"><img src="images/PawgressTask.png" alt="" /></a>
+									</div>
 									<p>Developed Pawgress, a productivity app using Android Studio and Java. Worked with a team to integrate task management with gamification elements, 
 										allowing users to curate tasks, earn in-app currency, and care for a virtual pet. Utilized Java for task tracking and user interactions, creating an 
 										engaging and rewarding experience. Designed user interfaces using XML and ensured seamless functionality integration. Conducted testing and optimization to enhance app performance.</p>
