Updated Certificates, Added Volunteering Work

--- a/PentaHack.html
+++ b/PentaHack.html
@@ -23,9 +23,6 @@
 						<!-- Content -->
 							
 							<section id="content" class="main">
-								<header style="text-align: center; justify-content:center">
-									<h1>Overview</h1>
-								</header>
 								<h2>Introduction</h2>
 								<p>Penta Hack is an AI-powered hackathon competition organised by the AI Student User Groups from all 5 polytechnics.
 									 This competition gave us first hand experience with designing and developing AI-powered solutions for real-world problems.
@@ -35,17 +32,9 @@
 									  for helping education. Over the course of the hackathon, my responsibilities included ensuring that we met all project
 									   milestones within the designated timeframe, assigning tasks
 									    that best suited each team member's skills, ensuring a balanced distribution of work. </p>
-								<h2>Problem Statement</h2>
-								<p>Quality education is crucial for students'
-									success, development, and readiness for
-									the future. This is only possible if
-									teachers are receiving quality feedback.
-									Yet, understanding how students are
-									responding to lessons has historically
-									been a challenge. This is an issue our AI
-									
-									aims to address.</p>
-								<h2>Our Solution</h2>
+								<h3>Problem Statement</h3>
+								<p>How can one integrate AI into education?</p>
+								<h3>Our Solution</h3>
 								<p>JoyCam is a web based software using facial recognition
 									technology and machine learning algorithms to analyze and
 									identify students' emotions based on facial expressions.
