--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 											I am an aspiring data scientist who is proficient in different programming languages. I am skilled in Python,
 											C# and Java and also am familiar with software such as PowerBI, Tableau, TIBCO, Adobe Photoshop and Adobe Illustrator. In the future, I want to be a Data Scientist who will make an impact on the world.</p>
 										<ul class="actions">
-											<li><a href="#" class="button">Download CV</a></li>
+											<li><a href="images/Walter_Resume.pdf" target="_blank" class="button">Download CV</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/MainPic.png" alt="" /></span>
@@ -114,7 +114,7 @@
 								<ul class="features">
 									<li>
 										<svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 80c0-26.5 21.5-48 48-48h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V80zM0 272c0-26.5 21.5-48 48-48H80c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V272zM368 96h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H368c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48z"/></svg>
-										<h3>PowerBi & Tableau</h3>
+										<h3>PowerBI & Tableau</h3>
 										<p>Created interactive data visualizations and dashboards in Tableau and Power Bi to present complex information in a clear and concise manner.</p>
 									</li>
 									<li>
@@ -146,7 +146,7 @@
 									</div>
 									<p>Developed Pawgress, a productivity app using Android Studio and Java. Worked with a team to integrate task management with gamification elements, 
 										allowing users to curate tasks, earn in-app currency, and care for a virtual pet. Utilized Java for task tracking and user interactions, creating an 
-										engaging and rewarding experience. Designed user interfaces using XML and ensured seamless functionality integration. Conducted testing and optimization to enhance app performance.</p>
+										engaging and rewarding experience. Successfully integrated APIs, specifically Firebase to securely store and manage user credentials, and account information. Designed user interfaces using XML and ensured seamless functionality integration. Conducted testing and optimization to enhance app performance.</p>
 										<div style = "display: flex;">
 											<ul class="actions special">
 												<li><a href="https://github.com/MAD2023-Team2/Pawgress" target="_blank" class="button">View GitHub</a></li>
